# arif-test

./: README.md  index.html  pyproject.toml  requirements.txt  setup.cfg
.codex/tasks/: 000_floors_and_ledger.yaml  101_arif_agi.yaml  102_psi_engine.yaml  103_tri_witness.yaml  201_arif_asi.yaml  301_apex_prime.yaml  401_compass.yaml  501_eee.yaml  999_integration.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: amanah_eula.md  architecture.md  floors.yaml  protocols.yaml  runbook.md  status.md  summary.md
platform/: __init__.py
platform/cooling_ledger/: __init__.py  sdk.py
platform/psi/: __init__.py  psi_score.py
platform/tri_witness/: __init__.py  checklist.md  quorum.py
tests/: conftest.py  test_apex_prime.py  test_arif_agi.py  test_asi.py  test_compass.py  test_eee.py  test_integration.py  test_ledger.py  test_psi.py  test_quorum.py
